--- a/package.json
+++ b/package.json
@@ -20,8 +20,5 @@
   "bugs": {
     "url": "https://github.com/0LEG0/next-yate-core/issues"
   },
-  "homepage": "https://github.com/0LEG0/next-yate-core",
-  "devDependencies": {
-    "eslint": "^6.8.0"
-  }
+  "homepage": "https://github.com/0LEG0/next-yate-core"
 }
