--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-yate",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Next-Yate is Nodejs External module for YATE (Yet Another Telephony Engine)",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/0LEG0/next-yate-core.git"
+    "url": "git+https://github.com/0LEG0/next-yate.git"
   },
   "keywords": [
     "yate",
@@ -18,7 +18,7 @@
   "author": "Anton",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/0LEG0/next-yate-core/issues"
+    "url": "https://github.com/0LEG0/next-yate/issues"
   },
-  "homepage": "https://github.com/0LEG0/next-yate-core"
+  "homepage": "https://github.com/0LEG0/next-yate"
 }
